# libinstrument-training

./: CMakeLists.txt  README.md
doc/: compile_commands.json  libinstrument-training_variables.txt
include.cmake/: cxx_flags.cmake
src/: aop_interceptor.cpp  aop_oop.cpp  exception_tracing.cpp  instrumented_dso_demo.cpp  mod_callgraph.cpp  mod_test.cpp  stack_tracing.cpp  trace_logging.cpp
